fixes required to handle AppleSilicon architecture

--- a/darwin/CMakeLists.txt
+++ b/darwin/CMakeLists.txt
@@ -50,23 +50,28 @@ if(NOT BUILD_SHARED_LIBS)
 	set(_LIBUINAME libui-temporary PARENT_SCOPE)
 endif()
 # thanks to Mr-Hide in irc.freenode.net/#cmake
-macro(_handle_static)
+macro(_handle_static ARCH)
 	set_target_properties(${_LIBUINAME} PROPERTIES
 		ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
 	set(_aname $<TARGET_FILE:${_LIBUINAME}>)
 	set(_lname libui-combined.list)
 	set(_oname libui-combined.o)
+	if(${ARCH} MATCHES "amd64")
+		set(ARCHITECTURE x86_64)
+	else()
+		set(ARCHITECTURE arm64)
+	endif()
 	add_custom_command(
 		OUTPUT ${_oname}
 		COMMAND
 			nm -m ${_aname} | sed -E -n "'s/^[0-9a-f]* \\([A-Z_]+,[a-z_]+\\) external //p'" > ${_lname}
 		COMMAND
-			ld -exported_symbols_list ${_lname} -r -all_load ${_aname} -o ${_oname}
+			ld -arch ${ARCHITECTURE} -exported_symbols_list ${_lname} -r -all_load ${_aname} -o ${_oname}
 		COMMENT "Removing hidden symbols")
 	add_library(libui STATIC ${_oname})
 	# otherwise cmake won't know which linker to use
 	set_target_properties(libui PROPERTIES
-		LINKER_LANGUAGE C)
+		LINKER_LANGUAGE C SUFFIX "_darwin_${ARCH}.a")
 	set(_aname)
 	set(_lname)
 	set(_oname)
